--- a/gdgoc/package.json
+++ b/gdgoc/package.json
@@ -12,13 +12,14 @@
   "dependencies": {
     "@chakra-ui/color-mode": "^2.2.0",
     "@chakra-ui/form-control": "^2.2.0",
-    "@chakra-ui/icons": "^2.2.4",
+    "@chakra-ui/icons": "^2.2.5",
     "@chakra-ui/input": "^2.1.2",
     "@chakra-ui/layout": "^2.3.1",
     "@chakra-ui/menu": "^2.2.1",
     "@chakra-ui/radio": "^2.1.2",
     "@chakra-ui/react": "^3.2.3",
     "@chakra-ui/select": "^2.1.2",
+    "@chakra-ui/theme": "^3.4.6",
     "@chakra-ui/toast": "^7.0.2",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
@@ -28,7 +29,6 @@
     "firebase-tools": "^13.28.0",
     "framer-motion": "^11.15.0",
     "next-themes": "^0.4.4",
-    "nvm": "^0.0.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^5.4.0",
@@ -36,6 +36,7 @@
     "react-router-dom": "7.0.2",
     "react-slick": "^0.30.2",
     "react-toast": "^1.0.3",
+    "react-toastify": "^11.0.2",
     "slick-carousel": "^1.8.1",
     "uuid": "^11.0.3",
     "web-vitals": "^4.2.4"
